# Jatte-chat-app

./: .gitignore  main.py  pyproject.toml
backend/accounts/: forms.py  models.py  urls.py
backend/backend/: asgi.py  settings.py  urls.py
backend/jatte/: admin.py  apps.py  consumer.py  models.py  routing.py  serializers.py  urls.py  views.py
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: About.jsx  Axios.jsx  Chat.jsx  Create.jsx  Delete.jsx  Edit.jsx  Home.jsx  Navbar.jsx
