[project]
name = "jatte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne]>=4.3.2",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "python-dotenv>=1.2.2",
    "pyuploadcare[django]>=6.2.1",
    "six>=1.17.0",
    "sqlparse>=0.5.5",
]
